2008-10-08  Gabriel Burt  <gabriel.burt@gmail.com>

	This patch refactors the Podcast code so that it can have playlists and
	smart playlists.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastImageFetchJob.cs:
	Don't assume the PodcastSource is the only podcast-containing source since
	we now have playlists too.

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: 
	* src/Clients/Nereid/Nereid/PlayerInterface.cs: Add and use new
	Source#GetProperty convenience method.

	* src/Core/Banshee.ThickClient/Banshee.Gui/InterfaceActionService.cs:
	Support propagation of ActiveSource properties, so that podcast playlists
	can have the same actions as the Podcasts source.

	* src/Core/Banshee.ThickClient/Banshee.Gui/BansheeActionGroup.cs: Change
	Add to accept params.

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/Column.cs: Get rid of cruft, and
	take the Id for a column from the sub-property if it exists, otherwise
	from the Property (as before).

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastItemView.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellPodcastStatusIndicator.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastActions.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/PodcastPropertiesDialog.cs:
	PodcastTrackInfo no longer subclasses from DatabaseTrackInfo - instead its
	the ExternalObject to the TrackInfos that are under the PodcastSource.
	Change code accessing the PodcastTrackInfo propeties to get to them via
	the PodcastTrackInfo.From (track_info) helper.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellPodcast.cs:
	Don't dispose images after rendering them the first time.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastSourceContents.cs: